--- a/apps/frontend/src/utils/translations/en.json
+++ b/apps/frontend/src/utils/translations/en.json
@@ -6,6 +6,9 @@
     "form": {
       "login": {
         "title": "Let's e-bet"
+      },
+      "register": {
+        "title": "Register yourself"
       }
     }
   }
